# esp-leveled-edge

./: Cargo.toml  README.md
src/: debounce.rs  leveled_edge.rs  lib.rs
src/examples/: rotary_encoder.rs
